# agente-local-releases

./: .gitignore  agente_local.py  update.json  version.json
agent-desktop/: .gitignore  README.md  index.html  package.json  vite.config.ts
agent-desktop/src/: App.tsx  index.css
agent-desktop/src-tauri/: Cargo.toml  tauri.conf.json
agent-desktop/src-tauri/src/: config.rs  main.rs
agent-desktop/src-tauri/src/api/: heartbeat.rs  mod.rs  polling.rs  status.rs
agent-desktop/src-tauri/src/db/: mod.rs
agent-desktop/src-tauri/src/escpos/: commands.rs  mod.rs  receipt.rs
agent-desktop/src-tauri/src/hardware/: drawer.rs  mod.rs  printer.rs  scale.rs  serial.rs
agent-desktop/src/pages/: ScaleSetup.tsx  ScaleStatus.tsx  Settings.tsx  Setup.tsx  Status.tsx
agent-tablet/: capacitor.config.ts  gerar-agente-android.bat  index.html  package-lock.json  package.json  vite.config.ts
agent-tablet/android/: capacitor.settings.gradle
agent-tablet/android/app/: build.gradle  capacitor.build.gradle
agent-tablet/android/app/src/main/java/com/miacardapio/agent/: MainActivity.java
agent-tablet/android/app/src/main/res/values/: strings.xml
agent-tablet/src/: App.tsx  escPosFormatter.ts  index.css  pollingService.ts
installer/: build_stub.bat  stub_installer.py
